# gz-python-bindings

./: .gitmodules  README.md  tag.sh  untag.sh
.github/workflows/: build-wheel.yml
simple/: index.html
simple/gz-python-bindings/: gz_python_bindings-8.5.7+jazzyharmonic-cp312-cp312-linux_x86_64.whl  gz_python_bindings-8.5.7+jazzyharmonic-cp312-cp312-manylinux_2_39_x86_64.whl  index.html
wheel_pkg/: pyproject.toml
