[build-system]
requires = ["setuptools>=74.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gz-python-bindings"
# sim8.common5.math7+jazzy(ros 2)harmonic(gz)
version = "8.5.7+jazzyharmonic"
description = "Python bindings for Gazebo math & sim vendors"
authors = [
  { name="Michael Anderson", email="anderson@mbari.org" },
]
#readme = "../README.md"
requires-python = ">=3.12"

[tool.setuptools.ext-modules]
# List each module matching .so filenames (import path = gz.<module>)
# Empty sources signals setuptools to treat as extension but not compile.
gz.math7   = { sources = [] }
gz.sim8    = { sources = [] }
gz.common5 = { sources = [] }
