[build-system]
requires = ["setuptools>=74.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gz-python-bindings"
# sim8.common5.math7+jazzy(ros 2)harmonic(gz)
version = "8.5.7+jazzyharmonic"
description = "Python bindings for Gazebo math & sim vendors"
authors = [
  { name="Michael Anderson", email="anderson@mbari.org" },
]
#readme = "../README.md"
requires-python = ">=3.12"

#[tool.setuptools]
#ext-modules = [
#  { name = "gz.math7", sources = [] },
#  { name = "gz.sim8", sources = [] },
#  { name = "gz.common5", sources = [] },
#]

[tool.setuptools.packages.find]
where = ["."]
include = ["gz", "gz.*"]

[tool.setuptools.package-data]
"gz" = ["*.so"]
